add new component

--- a/app/public/demo/index.html
+++ b/app/public/demo/index.html
@@ -24,9 +24,9 @@
         <nav class="navbar navbar-expand-lg fixed-top sticky" id="navbar">
             <div class="container">
                 <a href="/demo/index.html" class="navbar-brand">
-                    <img src="/demo//demo/images/logo-sm.png" class="logo-sm" alt="" height="24" />
-                    <img src="/demo//demo/images/logo-light.png" class="logo-light" alt="" height="16" />
-                    <img src="/demo//demo/images/logo-dark.png" class="logo-dark" alt="" height="16" />
+                    <img src="/demo/images/logo-sm.png" class="logo-sm" alt="" height="24" />
+                    <img src="/demo/images/logo-light.png" class="logo-light" alt="" height="16" />
+                    <img src="/demo/images/logo-dark.png" class="logo-dark" alt="" height="16" />
                 </a><!--end navbar-brand-->
                 <a href="javascript:void(0)" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggle-icon"><i data-feather="menu"></i></span>
